--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>About Me</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
               </nav>
   <div class="container">
     <div class="card" style="width: 65%;">
-      <img src="IMG_0055.JPG" class="card-img-top" alt="Photo of me" style="width: 25%; height: 50px;">
+      <img src="IMG_0055.JPG" class="card-img-top" alt="Photo of me">
       <div class="card-body">
         <h5 class="card-title">About Me</h5>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ante velit. Fusce ultricies venenatis erat ac consectetur. Etiam convallis mi purus, nec vestibulum sapien lobortis egestas. Nulla vehicula elit sed sollicitudin viverra. Donec porttitor dictum odio, sed aliquam magna aliquet nec. Donec vel tortor malesuada, sollicitudin nisl eget, consequat leo. Etiam ullamcorper velit in dolor egestas, vel tincidunt mauris molestie. Etiam eget arcu tortor. Proin cursus mauris eu auctor euismod. Maecenas auctor elementum est molestie convallis. Maecenas quis iaculis magna, congue pretium dui. Vivamus ex tellus, sodales et odio ut, ornare laoreet odio. Nam feugiat ultricies nunc eget finibus. Sed lorem neque, dignissim in eros eget, egestas facilisis neque. Sed auctor ante et varius gravida.
