Adding the footer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
       </div>
     </div>
+
+    <footer class="sticky-bottom text-center">
+      <h5>Thank you for visiting!</h5>
+    </footer>
   </div>
 </body>
 </html>
