--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
     <title>About Me</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Brittany Franklin</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link" href="contact.html">Contact Me</a>
-                    <!-- <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                  </div>
-                </div>
-              </nav>
-  <div class="container">
-    <div class="card" style="width: 65%;">
-      <img src="IMG_0055.JPG" class="card-img-top" alt="Photo of me">
-      <div class="card-body">
-        <h5 class="card-title">About Me</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ante velit. Fusce ultricies venenatis erat ac consectetur. Etiam convallis mi purus, nec vestibulum sapien lobortis egestas. Nulla vehicula elit sed sollicitudin viverra. Donec porttitor dictum odio, sed aliquam magna aliquet nec. Donec vel tortor malesuada, sollicitudin nisl eget, consequat leo. Etiam ullamcorper velit in dolor egestas, vel tincidunt mauris molestie. Etiam eget arcu tortor. Proin cursus mauris eu auctor euismod. Maecenas auctor elementum est molestie convallis. Maecenas quis iaculis magna, congue pretium dui. Vivamus ex tellus, sodales et odio ut, ornare laoreet odio. Nam feugiat ultricies nunc eget finibus. Sed lorem neque, dignissim in eros eget, egestas facilisis neque. Sed auctor ante et varius gravida.
-
-        </p>
-        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Brittany Franklin</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link" href="contact.html">Contact Me</a>
+          <!-- <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
       </div>
     </div>
-
-    <footer class="sticky-bottom text-center">
+  </nav>
+  <div class="container">
+    <div class="row">
+    <div class="media">
+      <img src="IMG_0055.JPG" class="align-self-start mr-3" alt="Brittany Franklin">
+        <div class="media-body">
+          <h2 class="mt-0 header">About Me</h2>
+          <p>My name is Brittany Franklin. I am from Charlotte, North Carolina. As of right now, I am a loan officer at State Employees' Credit Union.</p>
+          <p>Currently, I am training to become a full-stack developer. I have experience in HTML, CSS, Bootstrap, and JavaScript. Please visit my <a href="portfolio.html">portfolio</a> to see the projects that I have completed. If you are interested in my work, you can <a href="contact.html">send me a message.</a></p>
+        </div>
+    </div>
+    </div>
+    <div class="row">
+    <footer class="col-lg-10 footer">
       <h5>Thank you for visiting!</h5>
     </footer>
+    </div>
   </div>
 </body>
 </html>
