Final additions to Bootstrap Portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Brittany Franklin</a>
+    <a class="navbar-brand text-white font-weight-bold" href="#">Brittany Franklin</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,12 +23,13 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container col-lg-12 text-arial">
     <div class="row">
-    <div class="media">
+    <div class="media col-lg-10">
       <img src="IMG_0055.JPG" class="align-self-start mr-3" alt="Brittany Franklin">
         <div class="media-body">
           <h2 class="mt-0 header">About Me</h2>
+          <hr>
           <p>My name is Brittany Franklin. I am from Charlotte, North Carolina. As of right now, I am a loan officer at State Employees' Credit Union.</p>
           <p>Currently, I am training to become a full-stack developer. I have experience in HTML, CSS, Bootstrap, and JavaScript. Please visit my <a href="portfolio.html">portfolio</a> to see the projects that I have completed. If you are interested in my work, you can <a href="contact.html">send me a message.</a></p>
         </div>
