--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Brittany Franklin</a>
+    <a class="navbar-brand text-white font-weight-bold" href="#">Brittany Franklin</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav text-right">
         <a class="nav-item nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
         <a class="nav-item nav-link" href="contact.html">Contact Me</a>
@@ -23,10 +23,11 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container col-lg-12 text-arial">
     <div class="row">
-    <h2 class="header">Contact</h2>
+    <h2 class="header col-lg-10">Contact</h2>
     </div>
+    <hr>
     <div class="row">
     <form class="col-lg-10">
         <div class="form-group">
