--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Brittany Franklin</a>
+    <a class="navbar-brand text-white font-weight-bold" href="#">Brittany Franklin</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,17 +23,21 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container col-lg-12 text-arial">
     <div class="row">
       <h2 class="header">Portfolio</h2>
     </div>
+    <hr>
     <div class="row">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
+      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+    </div>
+    <div class="row">
+      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+    </div>
     </div>
     <div class="row">
     <footer class="col-lg-10 footer">
