--- a/portfolio.html
+++ b/portfolio.html
@@ -28,22 +28,68 @@
       <h2 class="header">Portfolio</h2>
     </div>
     <hr>
-    <div class="row">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-6mdQP137rYtCVT6SnQ0DOHrwbbMwQKeg7rQkwojQ0uOzwEOTTg" class="d-block w-100" alt="rock, paper, scissors"></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Rock, Paper, Scissors</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <a href="#"><img src="javascript.jpg" class="d-block w-100" alt="..."></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>JavaScript Project</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <a href="#"><img src="puzzle.jpg" class="d-block w-100" alt="..."></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Puzzle Game</h5>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <div class="row">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
-      <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail col-lg-3">
+    <!-- <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-6mdQP137rYtCVT6SnQ0DOHrwbbMwQKeg7rQkwojQ0uOzwEOTTg" alt="rock, paper, scissors">
+      <div class="carousel-caption d-none d-md-block">
+        <a href="#"><h5>Rock, Paper, Scissors Game</h5></a>
+      </div>
     </div>
+      <div class="carousel-item">
+        <img src="javascript.jpg" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <a href="#"><h5>JavaScript Project</h5></a>
+        </div>
+      </div>
     </div>
+    <div class="carousel-item">
+      <img src="puzzle.jpg" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <a href="#"><h5>Puzzle Game</h5></a>
+      </div>
+    </div> -->
     <div class="row">
     <footer class="col-lg-10 footer">
       <h5>Thank you for visiting!</h5>
     </footer>
     </div>
   </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
