Small portfolio update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2 class="mt-0 header">About Me</h2>
           <hr>
           <p>My name is Brittany Franklin. I am from Charlotte, North Carolina. As of right now, I am a loan officer at State Employees' Credit Union.</p>
-          <p>Currently, I am training to become a full-stack developer. I have experience in HTML, CSS, Bootstrap, and JavaScript. Please visit my <a href="portfolio.html">portfolio</a> to see the projects that I have completed. If you are interested in my work, you can <a href="contact.html">send me a message.</a></p>
+          <p>Currently, I am training to become a full-stack developer. I have experience in HTML, CSS, Bootstrap, and JavaScript. Please visit my <a href="portfolio.html">portfolio</a> to see the projects that I have completed. If you are interested in my work, you can send me a <a href="contact.html">message.</a></p>
         </div>
     </div>
     </div>
