Update to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-6mdQP137rYtCVT6SnQ0DOHrwbbMwQKeg7rQkwojQ0uOzwEOTTg" class="d-block w-100" alt="rock, paper, scissors"></a>
+          <a href="/unit-4-game/index.html"><img src="crystal.jpg" class="d-block w-100" alt="crystal collector"></a>
           <div class="carousel-caption d-none d-md-block">
-            <h5>Rock, Paper, Scissors</h5>
+            <h5>Crystal Collector</h5>
           </div>
         </div>
         <div class="carousel-item">
