Adding Crystal Collector to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="/unit-4-game/index.html"><img src="crystal.jpg" class="d-block w-100" alt="crystal collector"></a>
+          <a href="https://brittmoni.github.io/unit-4-game/"><img src="crystal.jpg" class="d-block w-100" alt="crystal collector"></a>
           <div class="carousel-caption d-none d-md-block">
             <h5>Crystal Collector</h5>
           </div>
