update to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,15 @@
           </div>
         </div>
         <div class="carousel-item">
-          <a href="#"><img src="javascript.jpg" class="d-block w-100" alt="..."></a>
+          <a href="https://brittmoni.github.io/giphy/"><img src="javascript.jpg" class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
-            <h5>JavaScript Project</h5>
+            <h5>Giphy</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <a href="#"><img src="puzzle.jpg" class="d-block w-100" alt="..."></a>
+          <a href="https://monikanikolova.github.io/Just-Eat-It/"><img src="chicken.jpg" class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
-            <h5>Puzzle Game</h5>
+            <h5>Trivia Game</h5>
           </div>
         </div>
       </div>
@@ -82,11 +82,12 @@
         <a href="#"><h5>Puzzle Game</h5></a>
       </div>
     </div> -->
-    <div class="row">
-    <footer class="col-lg-10 footer">
+  </div>
+
+  <div class="row">
+    <footer class="col-lg footer">
       <h5>Thank you for visiting!</h5>
     </footer>
-    </div>
   </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
