Improvements to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <div class="carousel-item">
           <a href="https://monikanikolova.github.io/Just-Eat-It/"><img src="chicken.jpg" class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
-            <h5>Trivia Game</h5>
+            <h5>Just Eat It</h5>
           </div>
         </div>
       </div>
