--- a/contact.html
+++ b/contact.html
@@ -29,21 +29,16 @@
     </div>
     <hr>
     <div class="row">
-    <form class="col-lg-10">
-        <div class="form-group">
-            <label for="formGroupExampleInput">Name</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name">
-          </div>
-      <div class="form-group">
-        <label for="exampleFormControlInput1">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      <div class="col-lg-6">
+        <ul>
+          <li>Email: brittfrank77@gmail.com</li>
+          <li>Phone: 980-297-1874</li>
+          <li><a href="https://github.com/brittmoni">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/brittany-franklin-643279139/">LinkedIn</a></li>
+          <li><a href="B Franklin Resume.pdf">Resume</a></li>
+        </ul>
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Message</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-      <button type="submit" class="btn btn-info">Submit</button>
-    </form>
+  
     </div>
     <div class="row">
     <footer class="col-lg-10 footer">
