--- a/portfolio.html
+++ b/portfolio.html
@@ -28,60 +28,21 @@
       <h2 class="header">Portfolio</h2>
     </div>
     <hr>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <a href="https://brittmoni.github.io/unit-4-game/"><img src="crystal.jpg" class="d-block w-100" alt="crystal collector"></a>
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Crystal Collector</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <a href="https://brittmoni.github.io/giphy/"><img src="javascript.jpg" class="d-block w-100" alt="..."></a>
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Giphy</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <a href="https://monikanikolova.github.io/Just-Eat-It/"><img src="chicken.jpg" class="d-block w-100" alt="..."></a>
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Just Eat It</h5>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    <!-- <div class="carousel-item">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-6mdQP137rYtCVT6SnQ0DOHrwbbMwQKeg7rQkwojQ0uOzwEOTTg" alt="rock, paper, scissors">
-      <div class="carousel-caption d-none d-md-block">
-        <a href="#"><h5>Rock, Paper, Scissors Game</h5></a>
-      </div>
-    </div>
-      <div class="carousel-item">
-        <img src="javascript.jpg" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <a href="#"><h5>JavaScript Project</h5></a>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="puzzle.jpg" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <a href="#"><h5>Puzzle Game</h5></a>
-      </div>
-    </div> -->
+
+    <figure class="figure">
+      <img src="chicken.jpg" class="figure-img img-fluid rounded" alt="...">
+      <figcaption class="figure-caption"><a href="https://monikanikolova.github.io/Just-Eat-It/">Just Eat It Group Projectt</a></figcaption>
+    </figure>
+
+    <figure class="figure">
+      <img src="crystal.jpg" class="figure-img img-fluid rounded" alt="...">
+      <figcaption class="figure-caption"><a href="https://brittmoni.github.io/unit-4-game/">Crystal Collector Homework</a></figcaption>
+    </figure>
+
+    <figure class="figure">
+      <img src="..." class="figure-img img-fluid rounded" alt="...">
+      <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    </figure>
   </div>
 
   <div class="row">
