--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
         </div>
     </div>
     </div>
-    <div class="row">
-    <footer class="col-lg-10 footer">
+    
+    <footer class="page-footer fixed-bottom text-center">
       <h5>Thank you for visiting!</h5>
     </footer>
-    </div>
   </div>
 </body>
 </html>
