--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-lg-6">
         <ul>
-          <li>Email: brittfrank77@gmail.com</li>
+          <li>Email: <a href="mailto:brittfrank77@gmail.com">brittfrank77@gmail.com</a></li>
           <li>Phone: 980-297-1874</li>
           <li><a href="https://github.com/brittmoni">Github</a></li>
           <li><a href="https://www.linkedin.com/in/brittany-franklin-643279139/">LinkedIn</a></li>
@@ -40,11 +40,11 @@
       </div>
   
     </div>
-    <div class="row">
-    <footer class="col-lg-10 footer">
+    
+    <footer class="page-footer fixed-bottom text-center">
       <h5>Thank you for visiting!</h5>
     </footer>
-    </div>
+
   </div>
 </body>
 </html>
