Portfolio page updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
     </figure>
 
     <figure class="figure">
-      <img src="..." class="figure-img img-fluid rounded" alt="...">
-      <figcaption class="figure-caption">A caption for the above image.</figcaption>
+      <img src="music.png" class="figure-img img-fluid rounded" alt="...">
+      <figcaption class="figure-caption"><a href="https://brittmoni.github.io/TriviaGame/">Music Trivia Game</a></figcaption>
     </figure>
   </div>
 
