--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container col-lg-12 text-arial">
     <div class="row">
     <div class="media col-lg-10">
-      <img src="IMG_0055.JPG" class="align-self-start mr-3" alt="Brittany Franklin">
+      <img src="./images/IMG_0055.JPG" class="align-self-start mr-3" alt="Brittany Franklin">
         <div class="media-body">
           <h2 class="mt-0 header">About Me</h2>
           <hr>
