--- a/portfolio.html
+++ b/portfolio.html
@@ -30,17 +30,17 @@
     <hr>
 
     <figure class="figure">
-      <img src="chicken.jpg" class="figure-img img-fluid rounded" alt="...">
+      <img src="./images/chicken.jpg" class="figure-img img-fluid rounded" alt="...">
       <figcaption class="figure-caption"><a href="https://monikanikolova.github.io/Just-Eat-It/">Just Eat It Group Projectt</a></figcaption>
     </figure>
 
     <figure class="figure">
-      <img src="crystal.jpg" class="figure-img img-fluid rounded" alt="...">
-      <figcaption class="figure-caption"><a href="https://brittmoni.github.io/unit-4-game/">Crystal Collector Homework</a></figcaption>
+      <img src="./images/2019-05-20.png" class="figure-img img-fluid rounded" alt="...">
+      <figcaption class="figure-caption"><a href="https://cryptic-ocean-36494.herokuapp.com">Freelance-A-Lot</a></figcaption> 
     </figure>
 
     <figure class="figure">
-      <img src="music.png" class="figure-img img-fluid rounded" alt="...">
+      <img src="./images/music.png" class="figure-img img-fluid rounded" alt="...">
       <figcaption class="figure-caption"><a href="https://brittmoni.github.io/TriviaGame/">Music Trivia Game</a></figcaption>
     </figure>
   </div>
