Small update to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 
     <figure class="figure">
       <img src="./images/chicken.jpg" class="figure-img img-fluid rounded" alt="...">
-      <figcaption class="figure-caption"><a href="https://monikanikolova.github.io/Just-Eat-It/">Just Eat It Group Projectt</a></figcaption>
+      <figcaption class="figure-caption"><a href="https://monikanikolova.github.io/Just-Eat-It/">Just Eat It Group Project</a></figcaption>
     </figure>
 
     <figure class="figure">
