Addition of descriptions for portfolio objects

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,16 +32,19 @@
     <figure class="figure">
       <img src="./images/chicken.jpg" class="figure-img img-fluid rounded" alt="...">
       <figcaption class="figure-caption"><a href="https://monikanikolova.github.io/Just-Eat-It/">Just Eat It Group Project</a></figcaption>
+      <figcaption class="figure-caption">This app allows the user to search for recipes based on the food name or the main ingredient.</figcaption>
     </figure>
 
     <figure class="figure">
       <img src="./images/2019-05-20.png" class="figure-img img-fluid rounded" alt="...">
-      <figcaption class="figure-caption"><a href="https://cryptic-ocean-36494.herokuapp.com">Freelance-A-Lot</a></figcaption> 
+      <figcaption class="figure-caption"><a href="https://cryptic-ocean-36494.herokuapp.com">Freelance-A-Lot</a></figcaption>
+      <figcaption class="figure-caption">Freelance-A-Lot is a group project that is created with the idea of helping freelancers find developer projects.</figcaption> 
     </figure>
 
     <figure class="figure">
       <img src="./images/music.png" class="figure-img img-fluid rounded" alt="...">
       <figcaption class="figure-caption"><a href="https://brittmoni.github.io/TriviaGame/">Music Trivia Game</a></figcaption>
+      <figcaption class="figure-caption">Test your music knowledge with this fun trivia game!</figcaption>
     </figure>
   </div>
 
